[package]
name = "summarize-places"
version = "0.1.0"
authors = ["Thom Chiovoloni <chiovolonit@gmail.com>"]

[dependencies]
clap = "2.32.0"
rusqlite = { version = "0.13.0", features = ["functions"] }
failure = "0.1.2"
dirs = "1.0.3"
log = "0.4.3"
env_logger = "0.5.12"
serde = "1.0.71"
serde_json = "1.0.26"
serde_derive = "1.0.71"
chrono = "0.4.5"
tempfile = "3.0.3"
rand = "0.5.5"
url = "1.7.1"
